[gd_scene load_steps=9 format=3 uid="uid://devr7s6qosxot"]

[ext_resource type="Script" path="res://ui/title/title.gd" id="1_ksjlk"]
[ext_resource type="Texture2D" uid="uid://jybi5wxyuluo" path="res://assets/ui/actor_pattern.png" id="2_48j4w"]
[ext_resource type="Texture2D" uid="uid://fayvt4rlkfqu" path="res://assets/ui/Title.png" id="2_g6b56"]
[ext_resource type="PackedScene" uid="uid://b18s0kfnnp2ch" path="res://ui/transition/transitioner.tscn" id="3_k2605"]
[ext_resource type="Theme" uid="uid://d0mdmnx1jp3v2" path="res://assets/ui/main_theme.tres" id="3_qocws"]
[ext_resource type="PackedScene" uid="uid://c6r5hdnc2e5n5" path="res://ui/settings_menu/settings_menu.tscn" id="4_lqysx"]

[sub_resource type="Animation" id="Animation_arwbk"]
resource_name = "scroll"
length = 15.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-256, -64), Vector2(-1212.35, 19.67)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ymrk"]
_data = {
"scroll": SubResource("Animation_arwbk")
}

[node name="Title" type="Node2D"]
script = ExtResource("1_ksjlk")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.380392)
texture_filter = 2
offset_left = -256.0
offset_top = -64.0
offset_right = 423.0
offset_bottom = 139.998
rotation = -0.0872665
scale = Vector2(8, 8)
texture = ExtResource("2_48j4w")
stretch_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_8ymrk")
}

[node name="Title" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(960, 320)
scale = Vector2(7.59322, 7.11111)
texture = ExtResource("2_g6b56")

[node name="Transitioner" parent="." instance=ExtResource("3_k2605")]

[node name="SettingsMenu" parent="." instance=ExtResource("4_lqysx")]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 640.0
offset_top = 640.0
offset_right = 1344.0
offset_bottom = 768.0
theme = ExtResource("3_qocws")

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_qocws")
text = "Play"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Credits" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Credits
"

[node name="Settings" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Settings"

[node name="Quit" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"

[connection signal="button_up" from="VBoxContainer/Play" to="." method="_on_play_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/Credits" to="." method="_on_credits_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/Settings" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/Quit" to="." method="_on_quit_button_up"]
